apps/gym/src/app/(auth)/login/Login.module.css
.container {
  position: absolute;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.card {
  display: flex;
  flex-direction: column;
  gap: 32px;
  width: 450px;
  height: min-content;
  box-shadow: var(--box-shadow);
  border-radius: 24px;
  padding: 32px;
}

.input_container, .button_container {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.input_container > input {
  padding: 12px;
}

.google_button {
  cursor: pointer;
  background-color: white;
  border: 1px solid black;
  text-align: center;
  border-radius: 10px;
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  font-size: 16px;
}

@media (width < 600px) {
  .container {
    width: calc(100% - 64px);
    padding: 32px;
  }
  .card {
    padding: 64px 32px;
  }
}

